--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
             </nav>
             <ul class="list contact link-container">
                 <li class="header-contact-list"><a class="link header-contact" href="mailto:info@devstudio.com">
-                    <svg class="header-svg" aria-label="конверт" width="16" hight="12">
+                    <svg class="header-svg" aria-label="конверт" width="16" height="12">
                         <use href="./images/symbol-defs.svg#icon-envelope" ></use>
                     </svg>
                     info@devstudio.com</a>
                 </li>
                 <li class="header-contact-list"><a class="link header-contact" href="tel:+380961111111">
-                    <svg class="header-svg" aria-label="телефон" width="12" hight="16">
+                    <svg class="header-svg" aria-label="телефон" width="12" height="16">
                         <use href="./images/symbol-defs.svg#icon-Vector" ></use>
                     </svg>
                     +38 096 111 11 11</a>
