--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <li class="card-features">
                         <div class="feachers-icon-bg">
                             <svg aria-label="годинник" class="feachers-icon" width="270" hight="120">
-                                <use href="./images/symbol-defs.svg#icon-envelope"></use>
+                                <use href="./images/symbol-defs.svg#icon-astronaut"></use>
                             </svg>
                             </div>
                         <h3 class="section-tittle">Сучасні технології</h3>
